--- a/src/assets/css/popup.css
+++ b/src/assets/css/popup.css
@@ -64,9 +64,10 @@
 	left:0;
 	z-index:888;
 	color:#333;
+  background-color:red;
 	font-family: Freesentation-7Black;
   font-weight:700;
-  background:url('../images/note.png') no-repeat 0 0/cover;
+  background:url('../images/note.png') no-repeat 0 0 /100%;
   
 }
 
