--- a/src/assets/css/popup.css
+++ b/src/assets/css/popup.css
@@ -52,26 +52,23 @@
 	/*box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);;*/
 }
 
-.popup_wrap h2 {
+.popup_wrap .popup_tit {
+  height:4.2rem;
+  background-color:red
+}
+
+.popup_wrap .popup_tit h2 {
 	width:100%;
 	font-size:1.6rem;
 	line-height:1.8rem;
   display:inline-block;
-	height:13rem;
-  padding:2.2rem 0 2.2rem 0;
-	position:fixed;
-	top:0;
-	left:0;
-	z-index:888;
-	color:#333;
-  background-color:red;
+  padding:2.2rem 0 0 0;
 	font-family: Freesentation-7Black;
   font-weight:700;
   background:url('../images/note.png') no-repeat 0 0 /100%;
-  
 }
 
-.popup_wrap h2 p {
+.popup_wrap .popup_tit p {
 	font-size:1.1rem;
 	line-height:1.4rem;
 	color:#666;
