--- a/src/assets/css/popup.css
+++ b/src/assets/css/popup.css
@@ -37,14 +37,13 @@
 	position:fixed;
 	top:0;
 	left:0;
-	padding:8.5rem 2rem 3rem 2rem;
+	padding:0;
 	overflow-y:auto;
 	z-index:888;
 }
 
 .popup_wrap .popup_inner {
-	margin-top:4.2rem;
-	margin-bottom:4rem;
+	margi:0 2rem 4rem 2rem;
 	background-color:#fff;
 	border-bottom-left-radius:1.5rem;
 	border-bottom-right-radius:1.5rem;
@@ -53,23 +52,30 @@
 }
 
 .popup_wrap .popup_tit {
-  height:4.2rem;
+  height:12rem;
   border:1px solid red;
-  background:url('../images/note.png') no-repeat 0 0 /100%;
-}
+ }
+
+.popup_wrap .popup_tit .note {
+  width:100%;
+  height:3rem;
+  border:1px solid red;
+ }
 
 .popup_wrap .popup_tit h2 {
   border:1px solid green;
 	width:100%;
+  height:7rem;
 	font-size:1.6rem;
 	line-height:1.8rem;
   display:inline-block;
-  padding:2.2rem 0 0 0;
+  margin:2.2rem 0 0 0;
 	font-family: Freesentation-7Black;
   font-weight:700;
 }
 
 .popup_wrap .popup_tit p {
+  height:3rem;
   border:1px solid blue;
 	font-size:1.1rem;
 	line-height:1.4rem;
