--- a/src/assets/css/popup.css
+++ b/src/assets/css/popup.css
@@ -60,6 +60,7 @@
   width:100%;
   height:3rem;
   border:1px solid red;
+  background:url('../images/note.png') no-repeat 0 0/cover;
  }
 
 .popup_wrap .popup_tit h2 {
