--- a/src/assets/css/popup.css
+++ b/src/assets/css/popup.css
@@ -53,12 +53,15 @@
 
 .popup_wrap .popup_tit {
   height:12rem;
-  border:1px solid red;
+  position:relative;
+  background-color:yellow
  }
 
 .popup_wrap .popup_tit .note {
   width:100%;
   height:3rem;
+  position:absolute;
+  bottom:0;
   border:1px solid red;
   background:url('../images/note.png') no-repeat 0 0/cover;
  }
