--- a/src/assets/css/popup.css
+++ b/src/assets/css/popup.css
@@ -53,17 +53,17 @@
 
 .popup_wrap .popup_tit {
   height:12rem;
+  padding:0 2rem 0 2rem;
   position:relative;
   background-color:yellow
  }
 
 .popup_wrap .popup_tit .note {
-  width:100%;
   height:2rem;
   position:absolute;
   bottom:0;
   border:1px solid red;
-  background:url('../images/note.png') no-repeat 0 0/cover;
+  background:url('../images/note.PNG') no-repeat 0 0/cover;
  }
 
 .popup_wrap .popup_tit h2 {
