--- a/src/assets/css/popup.css
+++ b/src/assets/css/popup.css
@@ -37,13 +37,13 @@
 	position:fixed;
 	top:0;
 	left:0;
-	padding:0;
+	padding:0 2rem 0 2rem;
 	overflow-y:auto;
 	z-index:888;
 }
 
 .popup_wrap .popup_inner {
-	margi:0 2rem 4rem 2rem;
+	margin-bottom:4rem;
 	background-color:#fff;
 	border-bottom-left-radius:1.5rem;
 	border-bottom-right-radius:1.5rem;
@@ -52,17 +52,17 @@
 }
 
 .popup_wrap .popup_tit {
+  width:100%;
   height:12rem;
-  padding:0 2rem 0 2rem;
   position:relative;
   background-color:yellow
  }
 
 .popup_wrap .popup_tit .note {
+  width:100%;
   height:2rem;
   position:absolute;
   bottom:0;
-  border:1px solid red;
   background:url('../images/note.PNG') no-repeat 0 0/cover;
  }
 
