--- a/src/assets/css/popup.css
+++ b/src/assets/css/popup.css
@@ -22,7 +22,7 @@
 	top:0.8rem;
 	right:0.8rem;
 	display: inline-block;
-	background:url('../images/ico_close01.png') no-repeat 0 0/cover;
+	background:url('@/assets/images/ico_close01.png') no-repeat 0 0/cover;
 	z-index:9999;
 }
 
@@ -63,7 +63,7 @@
   height:2rem;
   position:absolute;
   bottom:0;
-  background:url('../images/note.PNG') no-repeat 0 0/cover;
+  background:url('@/assets/images/note.PNG') no-repeat 0 0/cover;
  }
 
 .popup_wrap .popup_tit h2 {
