--- a/src/assets/css/popup.css
+++ b/src/assets/css/popup.css
@@ -45,15 +45,13 @@
 .popup_wrap .popup_inner {
 	margin-bottom:4rem;
 	background-color:#fff;
-	border-bottom-left-radius:1.5rem;
-	border-bottom-right-radius:1.5rem;
 	padding:2rem;
 	/*box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);;*/
 }
 
 .popup_wrap .popup_tit {
   width:100%;
-  height:10rem;
+  height:12rem;
   position:relative;
  }
 
@@ -71,6 +69,7 @@
 	line-height:1.8rem;
   display:inline-block;
   margin:2.2rem 0 0 0;
+  color:#333;
 	font-family: Freesentation-7Black;
   font-weight:700;
 }
