--- a/src/assets/css/popup.css
+++ b/src/assets/css/popup.css
@@ -46,21 +46,14 @@
 	margin-bottom:4rem;
 	background-color:#fff;
 	padding:2rem;
-	/*box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);;*/
+  border-radius:1.5rem;
+	box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
 .popup_wrap .popup_tit {
   width:100%;
-  height:12rem;
+  height:10rem;
   position:relative;
- }
-
-.popup_wrap .popup_tit .note {
-  width:100%;
-  height:2rem;
-  position:absolute;
-  bottom:0;
-  background:url('@/assets/images/note.PNG') no-repeat 0 0/cover;
  }
 
 .popup_wrap .popup_tit h2 {
@@ -89,7 +82,7 @@
 
 .popup_wrap .popup_btm {
 	width:100%;
-	padding:2rem;
+	padding:1.5rem 2rem 1.5rem 2rem;
 	position:fixed;
 	bottom:0;
 	left:0;
