--- a/src/assets/css/popup.css
+++ b/src/assets/css/popup.css
@@ -101,6 +101,7 @@
 .form_box_g input[type="text"] {
 	width:100%;
 	text-align:center;
+  border-bottom:1px solid #ddd;
 }
 
 .form_box_g.limit p {
@@ -123,7 +124,7 @@
 .form_box_g.limit p button.b_basic {
 	width:33.3%;
 	font-size:1rem;
-	line-height:2.5rem;
+	line-height:2.3rem;
 	border-radius: 0;
 	background-color:#f5f5f5;
 	border:1px solid #eee;
