--- a/src/assets/css/custom.css
+++ b/src/assets/css/custom.css
@@ -9,7 +9,10 @@
 }
 
 .scroll-picker-list {
-  display: flex;
+  height: 100%;
+  max-height: 100%;
+  touch-action: auto !important;
+} display: flex;
   flex-direction: column;
   align-items: center;
   overflow-y: scroll;
