--- a/src/assets/css/custom.css
+++ b/src/assets/css/custom.css
@@ -6,9 +6,11 @@
   overflow: hidden;
   user-select: none;
   touch-action: pan-y;
+  border:1px solid red;
 }
 
 .scroll-picker-list {
+  border:1px solid green;
   height: 100%;
   max-height: 100%;
   touch-action: auto !important; 
@@ -19,11 +21,13 @@
   -webkit-overflow-scrolling: touch;
   scrollbar-width: none;
 }
+
 .scroll-picker-list::-webkit-scrollbar {
   display: none;
 }
 
 .scroll-picker-item {
+  border:1px solid yellow;
   flex-shrink: 0;
   height: 40px;
   line-height: 40px;
