--- a/src/assets/css/custom.css
+++ b/src/assets/css/custom.css
@@ -20,6 +20,8 @@
   overflow-y: scroll;
   -webkit-overflow-scrolling: touch;
   scrollbar-width: none;
+  overflow-x: hidden;
+  touch-action: pan-y !important;  
 }
 
 .scroll-picker-list::-webkit-scrollbar {
