--- a/src/assets/css/custom.css
+++ b/src/assets/css/custom.css
@@ -1,8 +1,8 @@
 /*  공통 스타일  */
 .scroll-picker {
+  width: 100%;  
+  height:16rem;
   position: relative;
-  width: 100%;
-  height: 160px;
   overflow: hidden;
   user-select: none;
   touch-action: pan-y;
