--- a/src/assets/css/custom.css
+++ b/src/assets/css/custom.css
@@ -13,14 +13,14 @@
   border:1px solid green;
   height: 100%;
   max-height: 100%;
-  touch-action: auto !important; 
+  padding-top:1.5rem;
   display: flex;
   flex-direction: column;
   align-items: center;
   overflow-y: scroll;
+  overflow-x: hidden;
   -webkit-overflow-scrolling: touch;
   scrollbar-width: none;
-  overflow-x: hidden;
   touch-action: pan-y !important;  
 }
 
@@ -29,20 +29,22 @@
 }
 
 .scroll-picker-item {
+  width: 100%;
+  height:1.4rem;
+  line-height:1.4rem;
   border:1px solid yellow;
   flex-shrink: 0;
-  height: 40px;
-  line-height: 40px;
   font-size: 1.2rem;
   color: #999;
   text-align: center;
+  border-radius:1.5rem;
   transition: transform 0.2s, color 0.2s;
-  width: 100%;
+  
 }
 
 .scroll-picker-item.in-focus {
-  border-radius:1.5rem;
   font-weight: bold;
+  color:#333;
   transform: scale(1.2);
 }
 
