--- a/src/assets/css/custom.css
+++ b/src/assets/css/custom.css
@@ -13,7 +13,6 @@
   border:1px solid green;
   height: 100%;
   max-height: 100%;
-  padding-top:1.5rem;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -22,16 +21,21 @@
   -webkit-overflow-scrolling: touch;
   scrollbar-width: none;
   touch-action: pan-y !important;  
+  padding-top:2.5rem;
 }
 
 .scroll-picker-list::-webkit-scrollbar {
   display: none;
 }
 
+.scroll-picker-item,
+.scroll-picker::after {
+  height:2.5rem;
+  line-height:2.5rem;
+}
+
 .scroll-picker-item {
   width: 100%;
-  height:3.5rem;
-  line-height:1.4rem;
   border:1px solid yellow;
   flex-shrink: 0;
   font-size: 1.2rem;
@@ -54,11 +58,7 @@
   position: absolute;
   top: 50%;
   left: 0;
-  width: 100%;
-  height: 40px;
   transform: translateY(-50%);
-  border-top: 1px solid #ddd;
-  border-bottom: 1px solid #ddd;
   pointer-events: none;
 }
 
