--- a/src/assets/css/custom.css
+++ b/src/assets/css/custom.css
@@ -11,6 +11,9 @@
 
 detail_box.daily .scroll-picker {
   height:15rem;
+  display: flex;
+  justify-content: center;   /* 가로 가운데 정렬 */
+  align-items: center;  
   border:1px solid black;
 }
 
