--- a/src/assets/css/custom.css
+++ b/src/assets/css/custom.css
@@ -10,10 +10,8 @@
 }
 
 .detail_box.daily .scroll-picker {
-  height:13rem;
-  display: flex;
-  justify-content: center;   /* 가로 가운데 정렬 */
-  align-items: center;  
+  height:13rem; 
+  position:relative;
   border:1px solid black;
 }
 
@@ -24,6 +22,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
   overflow-y: scroll;
   overflow-x: hidden;
   -webkit-overflow-scrolling: touch;
