--- a/src/assets/css/custom.css
+++ b/src/assets/css/custom.css
@@ -1,24 +1,22 @@
 /*  공통 스타일  */
 .scroll-picker {
   width: 100%;  
-  height:100px;
+  height:120px;
   position: relative;
   overflow: hidden;
   user-select: none;
   touch-action: pan-y;
-  border:1px solid red;
 }
 
 .detail_box.daily .scroll-picker {
   height: 13rem;
+  margin-top:1.5rem;
   position: relative;
-  border: 1px solid black;
   overflow: hidden;
 }
 
 /* 스크롤 리스트 */
 .scroll-picker-list {
-  border: 1px solid green;
   width: 100%;
   height: 100%;
   display: flex;
@@ -29,7 +27,6 @@
   -webkit-overflow-scrolling: touch;
   scrollbar-width: none;
   touch-action: pan-y !important;  
-  padding: 0; /* ← 기존 40px 제거 */
 }
 
 /* 위아래 더미 공간 추가 */
@@ -43,11 +40,10 @@
 /* 아이템 */
 .scroll-picker-item {
   width: 100%;
-  border: 1px solid yellow;
   flex-shrink: 0;
   height: 40px;
   line-height: 40px;
-  font-size: 1.2rem;
+  font-size: 1rem;
   color: #999;
   text-align: center;
   border-radius: 1.5rem;
