--- a/src/assets/css/custom.css
+++ b/src/assets/css/custom.css
@@ -53,7 +53,8 @@
 
 .scroll-picker-item.light {
   font-weight: bold;
-  color:#333!;
+  color:#333;
+  border-radius:1.5rem;
   transform: scale(1.2);
 }
 
