--- a/src/assets/css/custom.css
+++ b/src/assets/css/custom.css
@@ -2,7 +2,7 @@
 .scroll-picker {
   width: 100%;  
   position: relative;
-  overflow: hidden;
+  overflow: visible;
   user-select: none;
   touch-action: pan-y;
 }
@@ -12,6 +12,7 @@
   margin-top:1rem;
   position: relative;
   overflow: hidden;
+  border:1px solid red;
 }
 
 /* 스크롤 리스트 */
@@ -54,7 +55,6 @@
   color:#333;
   border-radius:1.5rem;
   transform: scale(1.2);
-  background-color:#fff;
 }
 
 /* 중앙 선택 영역 */
