--- a/src/assets/css/custom.css
+++ b/src/assets/css/custom.css
@@ -51,8 +51,7 @@
 .scroll-picker-item.light {
   font-weight: bold;
   color:#333;
-  border-radius:1.5rem;
-  transform: scale(1.2);
+  border-radius:1.5rem!important;
 }
 
 /* 중앙 선택 영역 */
