--- a/src/assets/css/custom.css
+++ b/src/assets/css/custom.css
@@ -48,9 +48,11 @@
 }
 
 .scroll-picker-item.light {
+  width:90%;
   font-weight: bold;
   color:#333;
-  border-radius:1.5rem
+  border-radius:1.5rem;
+  transform: scale(1.2); 
 }
 
 /* 중앙 선택 영역 */
