--- a/src/assets/css/custom.css
+++ b/src/assets/css/custom.css
@@ -1,6 +1,8 @@
 /*  공통 스타일  */
 .scroll-picker {
   width: 100%;  
+  border-radius:1.5rem;
+  border:1px solid #ddd;
   position: relative;
   overflow: visible;
   user-select: none;
@@ -13,8 +15,7 @@
   height: 10rem;
 }
 .detail_box.weekly .scroll-picker {
-  height: 5rem;
-  border:1px solid green;
+  height: 8rem;
 }
 
 /* 스크롤 리스트 */
