--- a/src/assets/css/custom.css
+++ b/src/assets/css/custom.css
@@ -8,11 +8,12 @@
   touch-action: pan-y;
   margin:1rem 0 1rem 0;
   position: relative;
+  background-color:#f5f5f5;
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
 }
 
 .detail_box.daily .scroll-picker {
-  height: 10rem;
+  height: 12rem;
 }
 .detail_box.weekly .scroll-picker {
   height: 8rem;
