--- a/src/assets/css/custom.css
+++ b/src/assets/css/custom.css
@@ -9,7 +9,7 @@
   margin:1rem 0 1rem 0;
   position: relative;
   background-color:#f9f9f9;
-  box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+  box-shadow:inset 0 0 5px rgba(0, 0, 0, 0.1);
 }
 
 .detail_box.daily .scroll-picker {
