--- a/src/assets/css/custom.css
+++ b/src/assets/css/custom.css
@@ -9,7 +9,9 @@
   margin:1rem 0 1rem 0;
   position: relative;
   background-color:#f9f9f9;
-  box-shadow:inset 0 0 5px rgba(0, 0, 0, 0.1);
+  box-shadow:
+    inset -4px -4px 8px rgba(0, 0, 0, 0.15), 
+    inset 2px 2px 4px rgba(0, 0, 0, 0.05); 
 }
 
 .detail_box.daily .scroll-picker {
@@ -57,9 +59,10 @@
 .scroll-picker-item.light {
   width:80%;
   font-weight: bold;
-  color:#333;
+  color:#fff!important;
   border-radius:1.5rem;
-  transform: scale(1.2); 
+  transform: scale(1.2);
+  background-color:#333!important;
 }
 
 /* 중앙 선택 영역 */
