--- a/src/assets/css/custom.css
+++ b/src/assets/css/custom.css
@@ -70,9 +70,10 @@
   content: '';
   position: absolute;
   top: 50%;
-  left: 0;
-  transform: translateY(-50%);
+  left: 50%;
+  transform: translateY(-50% -50%);
   pointer-events: none;
+  height: 30px; 
 }
 
 
