--- a/src/assets/css/custom.css
+++ b/src/assets/css/custom.css
@@ -3,7 +3,7 @@
   width: 100%;  
   border-radius:1.5rem;
   position: relative;
-  overflow: visible;
+  overflow: hidden;
   user-select: none;
   touch-action: pan-y;
   margin:1rem 0 1rem 0;
@@ -28,11 +28,10 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  overflow-y: scroll;
+  overflow-y: auto;
   overflow-x: hidden;
   -webkit-overflow-scrolling: touch;
   scrollbar-width: none;
-  touch-action: pan-y !important;  
 }
 
 /* 위아래 더미 공간 추가 */
