--- a/src/assets/css/custom.css
+++ b/src/assets/css/custom.css
@@ -62,7 +62,7 @@
   left: 50%;
   width: 80%;
   height: 30px;
-  color:#fff;
+  color:#fff!important;
   background-color:#333;
   font-size:1.4rem;
   border-radius: 1.5rem;
