--- a/src/assets/css/custom.css
+++ b/src/assets/css/custom.css
@@ -54,6 +54,15 @@
   transition: transform 0.2s, color 0.2s;
 }
 
+.scroll-picker-item.light {
+  color: #fff !important;   /* 글자 색상 */
+  font-size: 1.2rem;        /* 글자 크기 확대 */
+  font-weight: bold;
+  background-color: #333;
+  transform: scale(1.15);
+  transition: all 0.2s ease;
+}
+
 /* 중앙 선택 영역 (고정 하이라이트) */
 .scroll-picker::after {
   content: '';
@@ -62,7 +71,6 @@
   left: 50%;
   width: 80%;
   height: 30px;
-  color:#fff!important;
   background-color:#333;
   font-size:1.4rem;
   border-radius: 1.5rem;
