--- a/src/assets/css/custom.css
+++ b/src/assets/css/custom.css
@@ -60,6 +60,8 @@
   font-size: 1.2rem;
   font-weight: bold;
   transform: scale(1.15);
+  border-radius:1.5rem;
+  width:80%;
   transition: all 0.2s ease;
 }
 
@@ -70,9 +72,7 @@
   left: 50%;
   width: 80%;
   height: 30px;
-  background-color: rgba(0, 0, 0, 0.08);
-  border-radius: 1.5rem;
-  transform: translate(-50%, -50%);
+  /*transform: translate(-50%, -50%);*/
   pointer-events: none;
   z-index: 5;
 }
