--- a/src/assets/css/custom.css
+++ b/src/assets/css/custom.css
@@ -19,7 +19,6 @@
   height: 10rem;
 }
 
-/* 리스트 */
 .scroll-picker-list {
   width: 100%;
   height: 100%;
@@ -32,7 +31,6 @@
   scrollbar-width: none;
 }
 
-/* 위아래 더미 공간 */
 .scroll-picker-list::before,
 .scroll-picker-list::after {
   content: '';
@@ -40,39 +38,26 @@
   height: calc((100% - 35px) / 2);
 }
 
-/* 아이템 */
 .scroll-picker-item {
   width: 100%;
   flex-shrink: 0;
   height: 30px;
   line-height: 30px;
   font-size: 1rem;
-  color: #999;
   text-align: center;
   border-radius: 1.5rem;
-  transition: transform 0.2s, color 0.2s;
+  color: #999;
 }
 
-/* 강조된 아이템 */
-.scroll-picker-item.light {
-  background-color: #333;
-  color: #fff !important;
-  font-size: 1.2rem;
-  font-weight: bold;
-  transform: scale(1.15);
-  border-radius:1.5rem;
-  width:80%;
-  transition: all 0.2s ease;
-}
-
-/* 중앙 고정 하이라이트 박스 */
 .highlight-overlay {
   position: absolute;
   top: 50%;
   left: 50%;
   width: 80%;
   height: 30px;
-  /*transform: translate(-50%, -50%);*/
+  background-color: rgba(0, 0, 0, 0.08);
+  border-radius: 1.5rem;
+  transform: translate(-50%, -50%);
   pointer-events: none;
   z-index: 5;
 }
