--- a/src/assets/css/custom.css
+++ b/src/assets/css/custom.css
@@ -47,6 +47,14 @@
   text-align: center;
   border-radius: 1.5rem;
   color: #999;
+  transition: all 0.2s ease;
+}
+
+.scroll-picker-item.light {
+  background-color: #333;
+  color: #fff;
+  font-size: 1.2rem;
+  font-weight: bold;
 }
 
 .highlight-overlay {
