--- a/src/assets/css/custom.css
+++ b/src/assets/css/custom.css
@@ -55,9 +55,9 @@
   left: 50%;
   width: 80%;
   height: 30px;
-  background-color: rgba(0, 0, 0, 0.08);
+  /*background-color: rgba(0, 0, 0, 0.08);*/
   border-radius: 1.5rem;
-  transform: translate(-50%, -50%);
+  /*transform: translate(-50%, -50%);*/
   pointer-events: none;
   z-index: 5;
 }
