--- a/src/assets/css/custom.css
+++ b/src/assets/css/custom.css
@@ -6,9 +6,9 @@
   user-select: none;
   touch-action: pan-y;
   margin: 1rem 0;
-  /*background-color: #f9f9f9;
+  background-color: #f9f9f9;
   border-radius: 1.5rem;
-  box-shadow:
+  /*box-shadow:
     inset -4px -4px 8px rgba(0, 0, 0, 0.05), 
     inset 1px 1px 2px rgba(0, 0, 0, 0.15); */
 }
@@ -64,7 +64,7 @@
   height: 30px;
   background-color: rgba(0, 0, 0, 0.04); /* 흐린 하이라이트 박스 */
   border-radius: 1.5rem;
-  /*transform: translate(-50%, -50%);*/
+  transform: translate(-50%, -50%);
   pointer-events: none;
   z-index: 5;
 }
