--- a/src/assets/css/custom.css
+++ b/src/assets/css/custom.css
@@ -5,20 +5,20 @@
   overflow: hidden;
   user-select: none;
   touch-action: pan-y;
-  margin: 1rem 0;
+  /*margin: 1rem 0;
   background-color: #f9f9f9;
   border-radius: 1.5rem;
-  /*box-shadow:
+  box-shadow:
     inset -4px -4px 8px rgba(0, 0, 0, 0.05), 
     inset 1px 1px 2px rgba(0, 0, 0, 0.15); */
 }
 
-.detail_box.daily .scroll-picker {
+/*.detail_box.daily .scroll-picker {
   height: 13rem;
 }
 .detail_box.weekly .scroll-picker {
   height: 10rem;
-}
+}*/
 
 /* 스크롤 리스트 */
 .scroll-picker-list {
@@ -47,7 +47,7 @@
   flex-shrink: 0;
   height: 30px;
   line-height: 30px;
-  font-size: 1rem;
+  font-size: 1.2rem;
   color: #333;
   text-align: center;
   border-radius: 1.5rem;
@@ -62,7 +62,8 @@
   left: 50%;
   width: 80%;
   height: 30px;
-  background-color: rgba(0, 0, 0, 0.04); /* 흐린 하이라이트 박스 */
+  border:1px solid #333;
+  /*background-color: rgba(0, 0, 0, 0.04);*/
   border-radius: 1.5rem;
   transform: translate(-50%, -50%);
   pointer-events: none;
