--- a/src/assets/css/custom.css
+++ b/src/assets/css/custom.css
@@ -13,12 +13,12 @@
     inset 1px 1px 2px rgba(0, 0, 0, 0.15); */
 }
 
-/*.detail_box.daily .scroll-picker {
-  height: 13rem;
+.detail_box.daily .scroll-picker {
+  height: 10rem;
 }
 .detail_box.weekly .scroll-picker {
   height: 10rem;
-}*/
+}
 
 /* 스크롤 리스트 */
 .scroll-picker-list {
