--- a/src/assets/css/custom.css
+++ b/src/assets/css/custom.css
@@ -5,17 +5,15 @@
   overflow: hidden;
   user-select: none;
   touch-action: pan-y;
-  /*margin: 1rem 0;
-  background-color: #f9f9f9;
+  margin: 1rem 0;
+  /*background-color: #f9f9f9;
   border-radius: 1.5rem;
   box-shadow:
     inset -4px -4px 8px rgba(0, 0, 0, 0.05), 
     inset 1px 1px 2px rgba(0, 0, 0, 0.15); */
 }
 
-.detail_box.daily .scroll-picker {
-  height: 10rem;
-}
+.detail_box.daily .scroll-picker,
 .detail_box.weekly .scroll-picker {
   height: 10rem;
 }
@@ -62,7 +60,7 @@
   left: 50%;
   width: 80%;
   height: 30px;
-  border:1px solid #333;
+  background-color:#ffe762;
   /*background-color: rgba(0, 0, 0, 0.04);*/
   border-radius: 1.5rem;
   transform: translate(-50%, -50%);
