--- a/src/assets/css/popup.css
+++ b/src/assets/css/popup.css
@@ -109,7 +109,7 @@
 }
 
 .form_box_g.limit .detail_box {
-	height:16rem;
+	/*height:16rem;*/
 	border-radius: 0;
 	border-bottom-right-radius: 1.5rem;
 	border-bottom-left-radius: 1.5rem;
