--- a/src/assets/css/custom.css
+++ b/src/assets/css/custom.css
@@ -61,10 +61,10 @@
   position: absolute;
   top: 50%;
   left: 50%;
-  width: 80%;
+  width: 100%;
   height: 30px;
-  border-color:#333;
-  background-color: rgba(255, 231, 98, 0.1);
+  border-color:#ddd;
+  background-color: rgba(0, 0, 0, 0.2);
   border-radius: 1.5rem;
   transform: translate(-50%, -50%);
   pointer-events: none;
