--- a/src/assets/css/popup.css
+++ b/src/assets/css/popup.css
@@ -113,7 +113,6 @@
 	border:1px solid #eee;
 	padding:1rem;
 	font-size:1rem;
-
 }
 
 .form_box_g.limit .detail_box {
@@ -126,13 +125,15 @@
 .monthly-grid {
   display: grid;
   grid-template-columns: repeat(7, 1fr);
-  gap: 0.4rem;
+  gap: 0.2rem;
+  margin:0 auto;
+  border:1px solid red
 }
 
 .monthly-grid span.m_s_btn {
 	width:2.2rem;
 	height:2.2rem;
-	line-height:2rem;
+	line-height:2.2rem;
 	display:inline-block;
 	margin-bottom:0.5rem;
   border-radius:50%;
