--- a/src/assets/css/popup.css
+++ b/src/assets/css/popup.css
@@ -123,13 +123,14 @@
   width: 100%;
 }
 
-.form_box_g .detail_box [class$="s_btn"] {
+.form_box_g .detail_box.daily [class$="s_btn"],
+.form_box_g .detail_box.weekly [class$="s_btn"]{
   flex: 1;  
   text-align: center;
   padding: 0.5rem;
   cursor: pointer;
   border-radius:1.5rem;
-  border:1px solid #ddd;
+  border:1px solid #eee;
 }
 
 
