--- a/src/assets/css/popup.css
+++ b/src/assets/css/popup.css
@@ -128,6 +128,11 @@
   margin-bottom:0
 }
 
+.form_box_g .detail_box .weekly .s_group_wrap {
+  background-color:#f5f5f5;
+  padding:1rem;
+}
+
 .form_box_g .detail_box.daily [class$="s_btn"],
 .form_box_g .detail_box.weekly [class$="s_btn"],
 .form_box_g .detail_box.daily .on_w,
