--- a/src/assets/css/color.css
+++ b/src/assets/css/color.css
@@ -110,6 +110,13 @@ body.blue .monthly-grid span.m_s_btn.selected {
   border:none;
 }
 
+body .on_w.light,
+body.blue .on_w.light {
+  background-color:#ddf2ff;
+  border:1px solid #0994ff;
+  color:#0994ff
+}
+
 /* skin color red*/
 body.red h1,
 body.red h2,
@@ -160,6 +167,12 @@ body.red .light,
 body.red .inline-wheel-item.selected,
 body.red .monthly-grid span.m_s_btn.selected  {
   background-color:#ffeef4;
+}
+
+body.red .on_w.light {
+  background-color:#ffeef4;
+  border:1px solid #ff4160;
+  color:#ff4160
 }
 
 /* skin color green*/
@@ -214,6 +227,13 @@ body.green .monthly-grid span.m_s_btn.selected {
   background-color:#d5f3ee;
 }
 
+
+body.green .on_w.light {
+  background-color:#d5f3ee;
+  border:1px solid #00ac6d;
+  color:#00ac6d
+}
+
 /* skin color bw*/
 body.bw h1,
 body.bw h2,
@@ -266,6 +286,13 @@ body.bw .inline-wheel-item.selected,
 body.bw .monthly-grid span.m_s_btn.selected  {
   background-color:#f5f5f5;
 }
+
+body.bw .on_w.light {
+  background-color:#f5f5f5;
+  border:1px solid #333;
+  color:#333
+}
+
 
 .t_red01 {
   color:#ff5450
