--- a/src/assets/css/popup.css
+++ b/src/assets/css/popup.css
@@ -131,10 +131,12 @@
 .form_box_g .detail_box.weekly .s_group_wrap {
   background-color:#f9f9f9;
   border:1px solid #eee;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   padding:1.5rem;
   margin-top:0.5rem;
   border-radius:1.5rem;
+  box-shadow: 
+  inset -3px -3px 8px rgba(0, 0, 0, 0.25),
+  inset 3px 3px 6px rgba(0, 0, 0, 0.1);   
 }
 
 .form_box_g .detail_box.daily [class$="s_btn"],
