--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -1,34 +1,21 @@
-@font-face {
-  font-family: 'Pretendard-Regular';
-  src: url('https://fastly.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
-  font-weight: 400;
-  font-style: normal;
-}
 
 @font-face {
   font-family: 'Paperlogy-8ExtraBold';
-  src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/2408-3@1.0/Paperlogy-8ExtraBold.woff2') format('woff2');
+  src: url('../fonts/Paperlogy-8ExtraBold.woff2') format('woff2');
   font-weight: 800;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Freesentation-9Black';
-  src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/2404@1.0/Freesentation-9Black.woff2') format('woff2');
+  src: url('../fonts/Freesentation-9Black.woff2') format('woff2');
   font-weight: 900;
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'Freesentation-7Black';
-  src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/2404@1.0/Freesentation-7Black.woff2') format('woff2');
-  font-weight: 700;
-  font-style: normal;
-}
-
-@font-face {
-    font-family: 'Ownglyph_ParkDaHyun';
-    src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/2411-3@1.0/Ownglyph_ParkDaHyun.woff2') format('woff2');
+    font-family: 'SUIT-Regular';
+    src: url('../fonts/SUIT-Regular.woff2') format('woff2');
     font-weight: normal;
     font-style: normal;
 }
@@ -41,7 +28,7 @@
 
 html, body {
   height: 100%;
-  font-family: 'Pretendard-Regular', 'Apple SD Gothic Neo', sans-serif;
+  font-family: 'SUIT-Regular', 'Apple SD Gothic Neo', sans-serif;
   font-size: 1rem;
   line-height: 1.5rem;
   color: #333;
@@ -93,7 +80,6 @@ h1 {
 
 h2 {
   font-family: 'Freesentation-9Black';
-  font-weight: bold;
   font-size:2rem;
   line-height:2.3rem;
 }
