--- a/src/assets/css/join.css
+++ b/src/assets/css/join.css
@@ -27,7 +27,6 @@
 }
 
 .intro_wrap .button {
-
 	margin-bottom:1rem
 }
 
@@ -81,11 +80,11 @@
   display: inline-flex;
   justify-content: center;
   align-items: center;
-  -webkit-mask-image: url('/src/assets/images/step.png');
+  -webkit-mask-image: url('../images/step.png');
   -webkit-mask-repeat: no-repeat;
   -webkit-mask-position: center;
   -webkit-mask-size: contain;
-  mask-image: url('/src/assets/images/step.png');
+  mask-image: url('../images/step.png');
   mask-repeat: no-repeat;
   mask-position: center;
   mask-size: contain;
@@ -221,16 +220,16 @@
 }
 
 .join_wrap .select_ruffy .ruffys .speech-bubble .r_detail01 span:first-child {
-  background-image: url('/src/assets/images/hey_ruffy_temp01_b.png');
+  background-image: url('../images/hey_ruffy_temp01_b.png');
 }
 .join_wrap .select_ruffy .ruffys .speech-bubble .r_detail02 span:first-child {
-  background-image: url('/src/assets/images/hey_ruffy_temp02_b.png');
+  background-image: url('../images/hey_ruffy_temp02_b.png');
 }
 .join_wrap .select_ruffy .ruffys .speech-bubble .r_detail03 span:first-child {
-  background-image: url('/src/assets/images/hey_ruffy_temp03_b.png');
+  background-image: url('../images/hey_ruffy_temp03_b.png');
 }
 .join_wrap .select_ruffy .ruffys .speech-bubble .r_detail04 span:first-child {
-  background-image: url('/src/assets/images/hey_ruffy_temp04_b.png');
+  background-image: url('../images/hey_ruffy_temp04_b.png');
 }
 
 .join_wrap .select_ruffy .ruffys .tail {
@@ -241,6 +240,10 @@
   left: 50%;
   transform: translateX(-50%);
   z-index: 1;
+}
+
+.join_wrap .select_ruffy .ruffys a.on {
+  background-color: #fff!important;
 }
 
 /* 회색 테두리 역할 (배경) - 아래 방향 */
