--- a/src/assets/css/popup.css
+++ b/src/assets/css/popup.css
@@ -1,7 +1,7 @@
 
 /* 전체 팝업 */
 .popup_wrap,
-.popup_wrap h2,
+.popup_wrap .close_btn_wrap,
 .popup_wrap .popup_btm {
 	background-color:#f9f9f9;
 }
@@ -13,17 +13,23 @@
 	line-height:1.4rem;
 }
 
+.close_btn_wrap {
+	width:100%;
+	position:fixed;
+	top:0;
+	left:0;
+	text-align:right;
+	background-color:red;
+	padding:1rem 1rem 0 0
+}
+
 
 .close_btn {
 	width:1.5rem;
 	height:1.5rem;
 	border-radius:50%;
-	position:fixed;
-	top:0.8rem;
-	right:0.8rem;
 	display: inline-block;
 	background:url('@/assets/images/ico_close01.png') no-repeat 0 0/cover;
-	z-index:9999;
 }
 
 .close_btn span {
@@ -37,25 +43,25 @@
 	position:fixed;
 	top:0;
 	left:0;
-	padding:0 2rem 0 2rem;
+	padding:0 1.5rem 0 1.5rem;
 	overflow-y:auto;
 	z-index:888;
-}
-
-.popup_wrap .popup_inner {
-	margin-bottom:8rem;
-	background-color:#fff;
-	padding:2rem;
-  border-radius:1.5rem;
-  /*border:1px solid #eee;
-	box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);*/
 }
 
 .popup_wrap .popup_tit {
   width:100%;
   height:10.5rem;
-  position:relative;
  }
+
+.popup_wrap .popup_inner {
+	margin: 0 0 8rem 0;
+	background-color:#fff;
+	padding:1.5rem;
+  border-radius:1.5rem;
+  border:1px solid #eee;
+	/*box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);*/
+}
+
 
 .popup_wrap .popup_tit h2 {
 	width:100%;
@@ -109,7 +115,7 @@
 	font-size:1rem;
 }
 
-.form_box_g.limit .detail_box {
+.form_box_g .detail_box {
   margin-top:0.5rem;
 }
 
@@ -158,6 +164,16 @@
   background-color:#fff;
 }
 
+.form_box_g .detail_box .inner_fix01 {
+ 	display: flex;
+  align-items: center; 
+  gap:0.5rem
+}
+
+.form_box_g .detail_box .start_date {
+ 	height:5rem;
+	background-color:red
+}
 
 /* 달력 */
 .form_box_g .detail_box.monthly {
@@ -169,25 +185,30 @@
 }
 
 .monthly-grid {
+	width:100%;
   display: grid;
   grid-template-columns: repeat(7, 1fr);
-  gap: 0.2rem;
-  margin:0 auto;
+  gap: 0.3rem;
+	text-align: center;
 }
 
-.monthly-grid span.m_s_btn {
-	width:2.2rem;
-	height:2.2rem;
-	line-height:2.2rem;
+.monthly-grid span.m_s_btn,
+.monthly-grid span.m_s_btn.light {
+	width:1.8rem;
+	height:1.8rem;
+	line-height:1.8rem;
+}
+
+.monthly-grid span.m_s_btn { 
+	width: 100%;        
+  aspect-ratio: 1 / 1; 
 	display:inline-block;
 	margin-bottom:0.5rem;
   border-radius:50%;
-  text-align: center;
-  cursor: pointer;
+  text-align: center!important;
+  cursor: pointer; 
 }
 
 .monthly-grid span.m_s_btn.light {
-  width:2.2rem;
-	height:2.2rem;
   font-weight:bold
 }
