--- a/src/assets/css/add_routine_pop.css
+++ b/src/assets/css/add_routine_pop.css
@@ -165,12 +165,43 @@
 }
 
 .form_box_g .detail_box .inner_fix01 {
- 	display: flex;
+	display: flex;
   align-items: center; 
   gap:0.5rem
 }
+.form_box_g .detail_box .t_red01 {
+	margin-top:1rem;
+	font-size:0.8rem;
+}
 
-.form_box_g .detail_box .start_date {
+.form_box_g .detail_box .data_fixed {
+	margin-top:1rem
+}
+
+.form_box_g .detail_box a.txt {
+	font-size:0.9rem;
+	margin-top:0.5rem;
+	display:block;
+	width:100%;
+}
+
+.form_box_g .detail_box .inner_fix01.alarm {
+ 	display: flex;
+  flex-direction: row;
+  align-items: center;       
+  justify-content: flex-start;
+  gap: 0;
+  text-align: left;
+}
+
+.form_box_g .detail_box .inner_fix01.alarm .toggle {
+	margin-left:0
+}
+
+.form_box_g .detail_box .inner_fix01.alarm a.txt {
+	width: auto !important;
+  align-self: center;    
+	margin-top:0
 }
 
 /* 달력 */
